8244220: Compiler error in jpackage with VS2019

Reviewed-by: herrick, almatvee, prr