src/jdk.incubator.jpackage/windows/native/libjpackage/JniUtils.h
@@ -48,6 +48,10 @@ struct JniObjWithEnv {
         return ! operator == (other);
     }
 
+    explicit operator bool() const {
+        return env && obj;
+    }
+
     JNIEnv *env;
     jobject obj;
 
